2004-11-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, NEWS: Updated.

2004-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* AUTHORS: Modified.

2004-10-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Added Ruby/GnomePrint
	* AUTHORS: Updated.

2004-08-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, NEWS: Revised.
	* extconf.rb, exec_make.rb: Add --strict option. 
	If you don't give this option, it doesn't exit with 1
	(exit(1)) because it doesn't mean failure of compilation
	and instalation of almost of all libraries.

2004-08-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* NEWS: Updated.

2004-08-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.

2004-03-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Updated dependencies for Ruby/Libgda.
	* NEWS: Updated.

2004-03-14  Dafydd Harries <daf@muse.19inch.net>

	* exec_make.rb: exit with 1 when failure occurred.

2004-03-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* NEWS: Updated.
	* extconf.rb: Remove debug code.

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Add atk as prior library.
	* README: Update Copyright.

2004-03-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Modified.
	
2004-02-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Add information of Ruby/ATK.
	* AUTHORS: ditto.

2004-02-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Correct ruby path.

2003-12-09  Laurent Sansonetti  <lrz@gnome.org>

	* README: Ruby/Libgda needs libgda 1.1.1 (development branch).

2003-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* NEWS: Updated.

2003-11-22  Laurent Sansonetti  <lrz@gnome.org>
                                                                                
	* README: libgda 1.0.2 or newer is needed for Ruby/Libgda.

2003-11-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* AUTHORS: Modified.

2003-11-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* AUTHORS: Modified.

2003-09-06  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
