@@ -2,31 +2,29 @@
 extconf.rb for Ruby/Libglade2 extention library
 =end
 
-$LOAD_PATH.unshift File.expand_path(File.dirname(__FILE__) + '/../glib/src/lib')
+PACKAGE_NAME = "libglade2"
+
+TOPDIR = File.expand_path(File.dirname(__FILE__) + '/..')
+MKMF_GNOME2_DIR = TOPDIR + '/glib/src/lib'
+SRCDIR = TOPDIR + '/libglade'
+
+$LOAD_PATH.unshift MKMF_GNOME2_DIR
 
 require 'mkmf-gnome2'
 
 PKGConfig.have_package('libglade-2.0') or exit 1
-check_win32
+setup_win32(PACKAGE_NAME)
 
-top = File.expand_path(File.dirname(__FILE__) + '/..') # XXX
-$CFLAGS += " " + ['glib/src', 'gtk/src'].map{|d|
-  "-I" + File.join(top, d)
-}.join(" ")
+add_depend_package("glib2", "glib/src", TOPDIR)
+add_depend_package("gtk2", "gtk/src", TOPDIR)
 
 have_header("libintl.h")
 have_func("bindtextdomain")
 have_func("bind_textdomain_codeset")
 
-if /cygwin|mingw/ =~ RUBY_PLATFORM
-  top = ".."
-  [
-    ["glib/src", "ruby-glib2"],
-    ["gtk/src", "ruby-gtk2"],
-  ].each{|d,l|
-    $LDFLAGS << " -L#{top}/#{d}"
-    $libs << " -l#{l}"
-  }
+if /mswin32/ =~ RUBY_PLATFORM
+  $libs.gsub!(/ xml2.lib /, " libxml2.lib ")
+  $libs.gsub!(/ z.lib /, " libz.lib ")
 end
 
 create_makefile("libglade2")  
