@@ -1,3 +1,7 @@
+2005-01-29  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* extconf.rb: Fix compiling error on MSVC+.
+
 2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* lib/libglade2.rb: Support GLib::Log.set_log_domain.
