@@ -1,3 +1,7 @@
+2005-01-31  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* extconf.rb, exec_make.rb: Support MSVC++(nmake).
+
 2004-11-15  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* README, NEWS: Updated.
